// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/ProgressBar/StepProgressBar Default 1`] = `
<div
  className="flex items-center justify-center p-8"
>
  <div
    className="px-4"
  >
    <div
      className="relative w-full"
    >
      <div
        className="w-full mb-12 lg:mb-16 wide:mb-20"
      >
        <div
          className="flex w-full justify-between"
        >
          <div>
            <div
              className="relative flex flex-col items-center"
            >
              <div
                style={
                  Object {
                    "height": undefined,
                    "width": 24,
                  }
                }
              />
              <p
                className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
                data-testid="txt"
              >
                Step 1
              </p>
            </div>
          </div>
          <div>
            <div
              className="relative flex flex-col items-center"
            >
              <div
                style={
                  Object {
                    "height": undefined,
                    "width": 24,
                  }
                }
              />
              <p
                className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
                data-testid="txt"
              >
                Step 2
              </p>
            </div>
          </div>
          <div>
            <div
              className="relative flex flex-col items-center"
            >
              <div
                style={
                  Object {
                    "height": undefined,
                    "width": 24,
                  }
                }
              />
              <p
                className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
                data-testid="txt"
              >
                Step 3
              </p>
            </div>
          </div>
          <div>
            <div
              className="relative flex flex-col items-center"
            >
              <div
                style={
                  Object {
                    "height": undefined,
                    "width": 24,
                  }
                }
              />
              <p
                className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
                data-testid="txt"
              >
                Step 4
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="absolute left-[10px] top-[5px] h-[9px] w-[calc(100%_-_20px)] rounded-full bg-neutral-200 lg:left-[12px] lg:top-2 lg:w-[calc(100%_-_24px)] wide:left-[14px] wide:top-[10px] wide:w-[calc(100%_-_28px)]"
        role="progressbar"
      >
        <div
          className="h-full bg-primary rounded-full transition-all duration-300"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/ProgressBar/StepProgressBar Error 1`] = `
<div
  className="px-4"
>
  <div
    className="relative w-full"
  >
    <div
      className="w-full mb-12 lg:mb-16 wide:mb-20"
    >
      <div
        className="flex w-full justify-between"
      >
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 1
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 2
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 3
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 4
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="absolute left-[10px] top-[5px] h-[9px] w-[calc(100%_-_20px)] rounded-full bg-neutral-200 lg:left-[12px] lg:top-2 lg:w-[calc(100%_-_24px)] wide:left-[14px] wide:top-[10px] wide:w-[calc(100%_-_28px)]"
      role="progressbar"
    >
      <div
        className="h-full bg-error rounded-full transition-all duration-300"
        style={
          Object {
            "width": "50%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/ProgressBar/StepProgressBar Secondary 1`] = `
<div
  className="px-4"
>
  <div
    className="relative w-full"
  >
    <div
      className="w-full mb-12 lg:mb-16 wide:mb-20"
    >
      <div
        className="flex w-full justify-between"
      >
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 1
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 2
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 3
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 4
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="absolute left-[10px] top-[5px] h-[9px] w-[calc(100%_-_20px)] rounded-full bg-neutral-200 lg:left-[12px] lg:top-2 lg:w-[calc(100%_-_24px)] wide:left-[14px] wide:top-[10px] wide:w-[calc(100%_-_28px)]"
      role="progressbar"
    >
      <div
        className="h-full bg-secondary rounded-full transition-all duration-300"
        style={
          Object {
            "width": "50%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/ProgressBar/StepProgressBar Success 1`] = `
<div
  className="px-4"
>
  <div
    className="relative w-full"
  >
    <div
      className="w-full mb-12 lg:mb-16 wide:mb-20"
    >
      <div
        className="flex w-full justify-between"
      >
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 1
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 2
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 3
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 4
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="absolute left-[10px] top-[5px] h-[9px] w-[calc(100%_-_20px)] rounded-full bg-neutral-200 lg:left-[12px] lg:top-2 lg:w-[calc(100%_-_24px)] wide:left-[14px] wide:top-[10px] wide:w-[calc(100%_-_28px)]"
      role="progressbar"
    >
      <div
        className="h-full bg-success rounded-full transition-all duration-300"
        style={
          Object {
            "width": "50%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/ProgressBar/StepProgressBar Tertiary 1`] = `
<div
  className="px-4"
>
  <div
    className="relative w-full"
  >
    <div
      className="w-full mb-12 lg:mb-16 wide:mb-20"
    >
      <div
        className="flex w-full justify-between"
      >
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 1
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 2
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 3
            </p>
          </div>
        </div>
        <div>
          <div
            className="relative flex flex-col items-center"
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
            <p
              className="opacity-50 wide:text-12 absolute min-w-[64px] text-center top-[calc(100%_+_16px)] text-12"
              data-testid="txt"
            >
              Step 4
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="absolute left-[10px] top-[5px] h-[9px] w-[calc(100%_-_20px)] rounded-full bg-neutral-200 lg:left-[12px] lg:top-2 lg:w-[calc(100%_-_24px)] wide:left-[14px] wide:top-[10px] wide:w-[calc(100%_-_28px)]"
      role="progressbar"
    >
      <div
        className="h-full bg-tertiary rounded-full transition-all duration-300"
        style={
          Object {
            "width": "50%",
          }
        }
      />
    </div>
  </div>
</div>
`;
